--- a/source/_posts/函数式编程.md
+++ b/source/_posts/函数式编程.md
@@ -43,11 +43,11 @@ Programming paradigm(编程范式) 是指某种编程语言典型的编程风格
 - 命令式编程：命令“机器”如何去做事情(how)，这样不管你想要的是什么(what)，它都会按照你的命令实现。
 - 声明式编程：告诉“机器”你想要的是什么(what)，让机器想出如何去做(how)。
 
-![img](../images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/157470078-42270eb9-131b-46f4-a7a6-7b8d38d177a7-20220309233741541.png)
+![img](/hexo/images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/157470078-42270eb9-131b-46f4-a7a6-7b8d38d177a7-20220309233741541.png)
 
 
 
-![image.png](../images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646646643161-8f4178d6-cb26-4802-a3e6-059d5f87ad6a.png)
+![image.png](/hexo/images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646646643161-8f4178d6-cb26-4802-a3e6-059d5f87ad6a.png)
 
 
 
@@ -95,7 +95,7 @@ divide(multiply(add(1, 2), 3), 4)
 
 重要的面向对象编程语言包含[Common Lisp](https://zh.wikipedia.org/wiki/Common_Lisp)、[Python](https://zh.wikipedia.org/wiki/Python)、[C++](https://zh.wikipedia.org/wiki/C%2B%2B)、[Objective-C](https://zh.wikipedia.org/wiki/Objective-C)、[Smalltalk](https://zh.wikipedia.org/wiki/Smalltalk)、[Delphi](https://zh.wikipedia.org/wiki/Delphi)、[Java](https://zh.wikipedia.org/wiki/Java)、[Swift](https://zh.wikipedia.org/wiki/Swift_(程式語言))、[C#](https://zh.wikipedia.org/wiki/C♯)、[Perl](https://zh.wikipedia.org/wiki/Perl)、[Ruby](https://zh.wikipedia.org/wiki/Ruby)、[JavaScript](https://zh.wikipedia.org/wiki/JavaScript) 与 [PHP](https://zh.wikipedia.org/wiki/PHP)等。
 
-![image-20220309233528183](../images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/image-20220309233528183-6840323.png)
+![image-20220309233528183](/hexo/images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/image-20220309233528183-6840323.png)
 
 
 
@@ -109,7 +109,7 @@ divide(multiply(add(1, 2), 3), 4)
 
 
 
-![img](../images/1646723393125-4ee8e029-5dcd-4f9f-b8b5-f12af590eab8.png)
+![img](/hexo/images/1646723393125-4ee8e029-5dcd-4f9f-b8b5-f12af590eab8.png)
 
 关键：
 
@@ -120,7 +120,7 @@ divide(multiply(add(1, 2), 3), 4)
 
 
 
-![img](../images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646723405108-44c8f62d-6eca-465d-86ce-9945b18b3f0a.png)
+![img](/hexo/images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646723405108-44c8f62d-6eca-465d-86ce-9945b18b3f0a.png)
 
 关键：
 
@@ -129,7 +129,7 @@ divide(multiply(add(1, 2), 3), 4)
 
 
 
-![img](../images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646723420340-41d09cf6-6f16-42fc-920d-3c7d218c9c91-6840367.png)
+![img](/hexo/images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646723420340-41d09cf6-6f16-42fc-920d-3c7d218c9c91-6840367.png)
 
 
 
@@ -144,7 +144,7 @@ divide(multiply(add(1, 2), 3), 4)
 
 
 
-![img](../images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646723444427-c4d5040f-4fb8-40e8-9029-d8326dd23d62-6840376.png)
+![img](/hexo/images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646723444427-c4d5040f-4fb8-40e8-9029-d8326dd23d62-6840376.png)
 
 
 
@@ -154,7 +154,7 @@ divide(multiply(add(1, 2), 3), 4)
 - 同步。内存同步和围栅、栏栅、互斥
 - 通信。消息传递、集合通信
 
-![img](../images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646646751422-c6d6dd51-5936-43d7-b357-90e299f9f76e-6840384.png)
+![img](/hexo/images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646646751422-c6d6dd51-5936-43d7-b357-90e299f9f76e-6840384.png)
 
 
 
@@ -193,7 +193,7 @@ python-kanren
 
 
 
-![img](../images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646727263171-2b1c6cb6-7791-4703-843d-e21ee7509e08.png)
+![img](/hexo/images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646727263171-2b1c6cb6-7791-4703-843d-e21ee7509e08.png)
 
 ### 数据驱动编程
 
@@ -237,11 +237,11 @@ demo：
 
 我们将使用一个简单的门。当玩家进入一个触发器区域,门打开时,当玩家离开引发地区,门关闭:
 
-![img](../images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646731476987-ba1b4d64-4ef2-4e4d-91c4-1b04fcabf94a.png)
+![img](/hexo/images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646731476987-ba1b4d64-4ef2-4e4d-91c4-1b04fcabf94a.png)
 
 如果我们让触发器区域覆盖整个门,然后门更多的是一种视觉细节,像一个星际旅行输送机的门:
 
-![img](../images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646731517811-695d1abd-95bc-4dc0-94cb-caee362d0549.png)
+![img](/hexo/images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646731517811-695d1abd-95bc-4dc0-94cb-caee362d0549.png)
 
 我们可以创建一个触发门对象有两个部分:一个触发器区域(即不是画在屏幕上),和一个物理的门,这是绘制在屏幕上,和通过阻止玩家/怪物。我们的门可以有两种状态,打开和关闭。关闭时,碰撞区域的门充满整个部分的走廊,当打开碰撞区域移动(或门对象标记为一个对象,不会撞上东西。)
 
@@ -438,7 +438,7 @@ class TriggeredDoor : WorldObject
 2、隔离变化。像上面的例子，每个消息处理的逻辑是不变的，但是消息可能是变化的，那就把容易变化的消息和不容易变化的逻辑分离。
 3、机制和策略的分离。机制就是消息的处理逻辑，策略就是不同的消息处理。
 
-![img](../images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646654817397-cc4ea5b6-a55e-4d97-a923-7f3810607fbb.png)
+![img](/hexo/images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646654817397-cc4ea5b6-a55e-4d97-a923-7f3810607fbb.png)
 
 
 
@@ -534,7 +534,7 @@ java中的运用
 
 一个最常用的Function
 
-![img](../images/1646740610546-c1403a0d-4ca7-498b-8b57-eb4c33e699b4.png)
+![img](/hexo/images/1646740610546-c1403a0d-4ca7-498b-8b57-eb4c33e699b4.png)
 
 ```xml
 Function<Integer,Integer> function = x -> x * 2;
