--- a/source/_posts/函数式编程.md
+++ b/source/_posts/函数式编程.md
@@ -833,3 +833,127 @@ protected def parse[T](command: String)(toResult: SqlBaseParser => T): T = {
         toResult(parser)
       ...
 ```
+
+java中的柯里化
+
+```java
+Function<String,
+Function<String,
+Function<String, String>>> sum =
+    a -> b -> c -> a + b + c; 
+
+Function<String, Function<String, String>> hi =
+    sum.apply("Hi ");
+Function<String, String> ho = hi.apply("Ho ");
+        System.out.println(ho.apply("Hup"));
+```
+
+#### 函数式编程下的并发编程
+
+一般来说有两种策略用来在并发线程中进行通信：共享数据和消息传递。使用共享数据方式的并发编程面临的最大的一个问题就是数据条件竞争。处理各种锁的问题是让人十分头痛的一件事。
+
+
+
+传统多数流行的语言并发是基于多线程之间的共享内存，使用同步方法防止写争夺，Actors使用消息模型，每个Actor在同一时间处理最多一个消息，可以发送消息给其他Actor，保证了单独写原则。从而巧妙避免了多线程写争夺。和共享数据方式相比，消息传递机制最大的优点就是不会产生数据竞争状态。实现消息传递有两种常见的类型：基于channel（golang为典型代表）的消息传递和基于Actor（erlang为代表）的消息传递。
+
+
+
+##### Actor简介
+
+Actor模型(Actor model)首先是由Carl Hewitt在1973定义， 由Erlang OTP 推广，其 消息传递更加符合面向对象的原始意图。Actor属于并发组件模型，通过组件方式定义并发编程范式的高级阶段，避免使用者直接接触多线程并发或线程池等基础概念。
+
+
+
+Actor模型=数据+行为+消息。
+
+erlang，在语言层面就提供了Actor模型的支持，RabbitMQ 就是基于erlang开发的。
+
+
+
+##### 
+
+
+
+##### 无锁
+
+JAVA并发编程时需要特别的关注锁和内存原子性等一系列线程问题，而Actor模型内部的状态由它自己维护即它内部数据只能由它自己修改(通过消息传递来进行状态修改)，所以使用Actors模型进行并发编程可以很好地避免这些问题。Actor内部是以单线程的模式来执行的，类似于redis，所以Actor完全可以实现分布式锁类似的应用。
+
+
+
+##### 异步
+
+每个Actor都有一个专用的MailBox来接收消息，这也是Actor实现异步的基础。当一个Actor实例向另外一个Actor发消息的时候，并非直接调用Actor的方法，而是把消息传递到对应的MailBox里，就好像邮递员，并不是把邮件直接送到收信人手里，而是放进每家的邮箱，这样邮递员就可以快速的进行下一项工作。所以在Actor系统里，Actor发送一条消息是非常快的。
+
+
+
+
+
+![img](/hexo/images/%E5%87%BD%E6%95%B0%E5%BC%8F%E7%BC%96%E7%A8%8B/1646915681082-e71378c3-a1e2-44c5-88b9-98ce0d485827.png)
+
+
+
+这样的设计主要优势就是解耦了Actor，数万个Actor并发的运行，每个actor都以自己的步调运行，且发送消息，接收消息都不会被阻塞。
+
+
+
+##### 隔离
+
+每个Actor的实例都维护这自己的状态，与其他Actor实例处于物理隔离状态，并非像 多线程+锁 模式那样基于共享数据。Actor通过消息的模式与其他Actor进行通信，与OO式的消息传递方式不同，Actor之间消息的传递是真正物理上的消息传递。
+
+
+
+##### 天生分布式
+
+每个Actor实例的位置透明，无论Actor地址是在本地还是在远程机器上对于代码来说都是一样的。每个Actor的实例非常小，最多几百字节，所以单机几十万的Actor的实例很轻松。如果你写过golang代码，就会发现其实Actor在重量级上很像Goroutine。由于位置透明性，所以Actor系统可以随意的横向扩展来应对并发，对于调用者来说，调用的Actor的位置就在本地，当然这也得益于Actor系统强大的路由系统。
+
+
+
+
+
+
+
+
+
+
+
+```scala
+case class SetRequest(key: String, value: String)
+
+
+class AkkademyDb extends Actor {
+  val map = new HashMap[String, String]
+  val log = Logging(context.system, this)
+
+  override def receive = {
+    case SetRequest(key, value) => {
+      log.info("received SetRequest - key: {} value: {}", key, value)
+      map.put(key, value)
+    }
+    case o => log.info("received unknown message: {}", o);
+  }
+}
+
+
+
+val actorRef = TestActorRef(new AkkademyDb)
+actorRef ! SetRequest("key", "value")
+```
+
+
+
+### 思维的转变
+
+
+
+总结下函数式常用思维方式：
+
+
+
+1. **表达式化**
+   就是去掉变量，去掉循环，通过表达式处理逻辑。
+2. **数据与行为分离，无副作用**
+   由于严格作用域，必须没有副作用。
+3. **高阶思维**
+   能用 map 解决的，就不要 for 循环
+4. **组合思维**
+   函数式和面向对象是相反的，面向对象是自顶向下的设计，函数式是自底向上的设计，也就是先定义基本操作，然后不断组合。比如 sql 定义了 select， from， where ... 这些组合子来满足查询需求。
